# learning-python

./: .gitignore  car.py  classes.py  dog.py  main.py  pyproject.toml
.github/workflows/: heroku.yml
decorators/: main.py
files/: main.py
generators/: main.py
image-playground/: PngToJpeg.py  main.py
inheritance/: contacts.py  employees.py  hr.py  main.py  productivity.py
machine-learning/: index.html  mlbrain.joblib  soccer.ipynb
machine-learning/.ipynb_checkpoints/: soccer2-checkpoint.ipynb
oop-na-pratica/: main.py
packt-mastering-oop/: main.py
pdf/: draft.py  main.py
scrapping/: main.py
the-python-pro-course/: Pipfile  geo.py  main.py  map.html
webserver/: app.py  requirements.txt
webserver/static/css/: style.css
webserver/templates/: index.html
