[tool.poetry]
name = "Learning Python"
version = "0.1.0"
description = "Learning about Python"
authors = ["Julio Saraiva <contato@juliosaraiva.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
