[tool.poetry]
name = "Learning Python"
version = "0.1.0"
description = "Learning about Python"
authors = ["Julio Saraiva <contato@juliosaraiva.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.0.1"
PyPDF2 = "^1.26.0"
PyMuPDF = "^1.18.4"
reportlab = "^3.5.55"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
